WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100972
[Mac] Crash in Range::editingStartPosition
https://bugs.webkit.org/show_bug.cgi?id=100972
Summary
[Mac] Crash in Range::editingStartPosition
Ryosuke Niwa
Reported
2012-11-01 11:17:05 PDT
http://trac.webkit.org/browser/trunk/Source/WebCore/editing/mac/EditorMac.mm#L165
165 RefPtr<Range> range = m_frame->selection()->toNormalizedRange(); 166 if (Node* startNode = adjustedSelectionStartForStyleComputation(m_frame->selection()->selection()).deprecatedNode()) { 167 Node* pastEnd = range->pastLastNode(); range could be null in the line 165, in which case, we blow up in the line 167. We've been getting crash reports in Safari. <
rdar://problem/10227183
>
Attachments
Fixes the bug
(1.75 KB, patch)
2012-11-01 11:20 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-11-01 11:20:59 PDT
Created
attachment 171898
[details]
Fixes the bug
WebKit Review Bot
Comment 2
2012-11-01 12:02:41 PDT
Comment on
attachment 171898
[details]
Fixes the bug Clearing flags on attachment: 171898 Committed
r133207
: <
http://trac.webkit.org/changeset/133207
>
WebKit Review Bot
Comment 3
2012-11-01 12:02:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug