[Mac] Crash in Range::editingStartPosition https://bugs.webkit.org/show_bug.cgi?id=100972

Reviewed by Enrica Casucci.

Add a missing null pointer check. toNormalizedRange() can return null here, in which case the call to
pastLastNode() will crash.

No new tests since determining the exact condition under which we go through the said code path and
toNormalRange returns null is hard.

* editing/mac/EditorMac.mm:
(WebCore::Editor::fontForSelection):


Canonical link: https://commits.webkit.org/119074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133207 268f45cc-cd09-0410-ab3c-d52691b4dbfc